<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_estatico"
            android:icon="@drawable/ic_menu_estatico"
            android:title="@string/menu_lista" />
        <item
            android:id="@+id/nav_dinamico"
            android:icon="@drawable/ic_menu_dinamico"
            android:title="@string/menu_grelha" />
    </group>
    <item android:title="@string/menu_comunicar" >
        <menu >
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/menu_email" />
        </menu>
    </item>
</menu>